[metadata]
name = dir_tree
version = attr: dir_tree.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Print directory tree.
keywords = file system, directory tree.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/dir_tree
license = apache2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7



[options.packages.find]
where = src
exclude =
    tests*
    nbs*
    docs*